--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <style>
     * { box-sizing: border-box; }
     body { margin: 0; font-family: Arial, sans-serif; }
-    .sidebar { position: fixed; top: 0; left: 0; width: 200px; height: 100vh; background: #0052cc; display: flex; flex-direction: column; align-items: center; padding-top: 1rem; z-index: 1000; }
-    .sidebar img { width: 60px; margin-bottom: 1rem; border-radius: 8px; }
+    .sidebar { position: fixed; top:0; left:0; width:200px; height:100vh; background:#0052cc; display:flex; flex-direction:column; align-items:center; padding-top:1rem; z-index:1000; }
+    .sidebar img { width:60px; margin-bottom:1rem; border-radius:8px; }
     .btn-nav { width:100%; background:none; color:#fff; border:none; text-align:left; padding:0.75rem 1rem; cursor:pointer; display:flex; align-items:center; transition:background 0.2s; }
     .btn-nav:hover, .btn-nav.active { background:#003d99; }
     .content { margin-left:200px; padding:1rem; }
@@ -24,7 +24,7 @@
     table { width:100%; border-collapse:collapse; margin-bottom:1rem; }
     th, td { border:1px solid #ccc; padding:0.5rem; }
     form select, form input, form textarea, form button { width:100%; padding:0.5rem; margin-bottom:0.75rem; border:1px solid #ccc; border-radius:4px; }
-    @media (max-width:768px) { .sidebar { width:100%; flex-direction:row; overflow-x:auto; } .content { margin-left:0; padding-top:4rem; } }
+    @media (max-width:768px) { .sidebar { width:100%; height:auto; flex-direction:row; overflow-x:auto; } .content { margin-left:0; padding-top:4rem; } }
   </style>
 </head>
 <body>
@@ -47,14 +47,14 @@
     <section id="registro" class="section">
       <h2>Registro de Contacto</h2>
       <form id="form-contacto">
-        <input name="nombre" placeholder="Nombre" required />
-        <input type="number" name="edad" placeholder="Edad" required />
-        <input name="telefono" placeholder="Teléfono" required />
-        <select name="genero" required><option value="">Género</option><option>Masculino</option><option>Femenino</option></select>
-        <input name="ubicacion" placeholder="Ubicación" />
-        <label><input type="checkbox" name="aceptoCristo" />Aceptó a Cristo</label>
-        <label><input type="checkbox" name="bautizado" />Bautizado</label>
-        <label><input type="checkbox" name="discipulado" />Desea discipulado</label>
+        <input id="nombre" name="nombre" placeholder="Nombre" required />
+        <input id="edad" type="number" name="edad" placeholder="Edad" required />
+        <input id="telefono" name="telefono" placeholder="Teléfono" required />
+        <select id="genero" name="genero" required><option value="">Género</option><option>Masculino</option><option>Femenino</option></select>
+        <input id="ubicacion" name="ubicacion" placeholder="Ubicación" />
+        <label><input type="checkbox" id="aceptoCristo" name="aceptoCristo" />Aceptó a Cristo</label>
+        <label><input type="checkbox" id="bautizado" name="bautizado" />Bautizado</label>
+        <label><input type="checkbox" id="discipulado" name="discipulado" />Desea discipulado</label>
         <button type="submit">Guardar</button>
       </form>
     </section>
@@ -69,7 +69,7 @@
       <h2>Seguimiento</h2>
       <form id="form-seguimiento">
         <select id="contacto-seg"><option value="">Selecciona contacto</option></select>
-        <input type="date" id="fecha-seg" required />
+        <input id="fecha-seg" type="date" required />
         <select id="tipo-seg"><option>Visita</option><option>Llamada</option><option>Mensaje</option></select>
         <button type="submit">Registrar</button>
       </form>
@@ -79,12 +79,9 @@
       <h2>Grupos y Discipulados</h2>
       <form id="form-grupo">
         <input type="hidden" id="grupo-id" />
-        <label>Nombre del Grupo:</label>
-        <input id="nombre-grupo" placeholder="Nombre del Grupo" required />
-        <label>Selecciona Miembros:</label>
-        <select id="miembros-grupo" multiple></select>
-        <label>Miembros en el Grupo:</label>
-        <textarea id="miembros-seleccionados" rows="3" readonly></textarea>
+        <label>Nombre del Grupo:</label><input id="nombre-grupo" placeholder="Nombre del Grupo" required />
+        <label>Selecciona Miembros:</label><select id="miembros-grupo" multiple></select>
+        <label>Miembros en el Grupo:</label><textarea id="miembros-seleccionados" rows="3" readonly></textarea>
         <button type="submit">Guardar Grupo</button>
       </form>
       <ul id="lista-grupos"></ul>
@@ -93,7 +90,7 @@
       <h2>Calendario de Bautismo</h2>
       <form id="form-bautismo">
         <select id="bautizo-contacto"><option value="">Selecciona contacto</option></select>
-        <input type="date" id="bautizo-fecha" required />
+        <input id="bautizo-fecha" type="date" required />
         <button type="submit">Agregar Bautismo</button>
       </form>
       <ul id="lista-bautismos"></ul>
@@ -112,7 +109,7 @@
       <h2>Calendario de Evangelismo</h2>
       <form id="form-evento">
         <input id="nombre-evento" placeholder="Evento" required />
-        <input type="date" id="fecha-evento" required />
+        <input id="fecha-evento" type="date" required />
         <button type="submit">Programar</button>
       </form>
       <ul id="lista-eventos"></ul>
@@ -124,63 +121,62 @@
       const contactos = window.contactos;
       const grupos = [];
       // Navegación
-      document.querySelectorAll('aside .btn-nav[data-section]').forEach(btn => {
-        btn.addEventListener('click', () => {
-          document.querySelectorAll('aside .btn-nav').forEach(b => b.classList.remove('active'));
-          btn.classList.add('active');
-          const secId = btn.dataset.section;
-          document.querySelectorAll('main .section').forEach(sec => sec.classList.toggle('active', sec.id === secId));
-          // Poblar selects
-          if (secId === 'seguimiento') poblarSelect('contacto-seg');
-          if (secId === 'grupos') { poblarSelect('miembros-grupo'); actualizarMiembrosSeleccionados(); }
-          if (secId === 'bautismo') poblarSelect('bautizo-contacto');
-          if (secId === 'reportes') poblarSelect('reporte-contacto');
-        });
-      });
-      function poblarSelect(id) {
-        const sel = document.getElementById(id);
-        sel.innerHTML = '<option value="">Selecciona contacto</option>';
-        contactos.forEach(c => sel.innerHTML += `<option value="${c.id}">${c.nombre}</option>`);
+      document.querySelectorAll('aside .btn-nav').forEach(btn => btn.addEventListener('click', () => {
+        document.querySelectorAll('aside .btn-nav').forEach(b=>b.classList.remove('active'));
+        btn.classList.add('active');
+        const secId = btn.dataset.section;
+        document.querySelectorAll('main .section').forEach(sec=>sec.classList.toggle('active',sec.id===secId));
+        // Populate selects when entering each section
+        if(secId==='registro') document.getElementById('form-contacto').reset();
+        if(secId==='historial');
+        if(secId==='seguimiento') populateSelect('contacto-seg');
+        if(secId==='grupos') { populateSelect('miembros-grupo'); updateSelectedMembers(); }
+        if(secId==='bautismo') populateSelect('bautizo-contacto');
+        if(secId==='reportes') populateSelect('reporte-contacto');
+      }));
+      function populateSelect(id) {
+        const sel = document.getElementById(id); sel.innerHTML='<option value="">Selecciona contacto</option>';
+        contactos.forEach(c=>sel.innerHTML+=`<option value="${c.id}">${c.nombre}</option>`);
       }
-      function actualizarMiembrosSeleccionados() {
+      function updateSelectedMembers() {
         const sel = document.getElementById('miembros-grupo');
-        document.getElementById('miembros-seleccionados').value = Array.from(sel.selectedOptions).map(o => o.text).join(', ');
+        document.getElementById('miembros-seleccionados').value=Array.from(sel.selectedOptions).map(o=>o.text).join(', ');
       }
+      document.getElementById('miembros-grupo').addEventListener('change', updateSelectedMembers);
       // Registro
-      document.getElementById('form-contacto').addEventListener('submit', e => {
-        e.preventDefault(); const f = e.target;
-        contactos.push({ id: Date.now(), nombre: f.nombre.value, edad: f.edad.value, telefono: f.telefono.value, genero: f.genero.value, ubicacion: f.ubicacion.value });
-        document.getElementById('lista-contactos').innerHTML += `<tr><td>${f.nombre.value}</td><td>${f.edad.value}</td><td>${f.telefono.value}</td><td>${f.genero.value}</td><td>${f.ubicacion.value}</td></tr>`;
+      document.getElementById('form-contacto').addEventListener('submit', e=>{
+        e.preventDefault(); const f=e.target;
+        contactos.push({id:Date.now(), nombre:f.nombre.value, edad:f.edad.value, telefono:f.telefono.value, genero:f.genero.value, ubicacion:f.ubicacion.value});
+        document.getElementById('lista-contactos').innerHTML+=`<tr><td>${f.nombre.value}</td><td>${f.edad.value}</td><td>${f.telefono.value}</td><td>${f.genero.value}</td><td>${f.ubicacion.value}</td></tr>`;
         f.reset();
       });
       // Seguimiento
-      document.getElementById('form-seguimiento').addEventListener('submit', e => {
-        e.preventDefault();
-        const sel = document.getElementById('contacto-seg');
-        document.getElementById('lista-seguimiento').innerHTML += `<li>${sel.options[sel.selectedIndex].text} - ${document.getElementById('fecha-seg').value}</li>`;
+      document.getElementById('form-seguimiento').addEventListener('submit', e=>{
+        e.preventDefault(); const sel=document.getElementById('contacto-seg');
+        document.getElementById('lista-seguimiento').innerHTML+=`<li>${sel.options[sel.selectedIndex].text} - ${document.getElementById('fecha-seg').value}</li>`;
         e.target.reset();
       });
       // Grupos
-      document.getElementById('form-grupo').addEventListener('submit', e => {
-        e.preventDefault(); const idInput = document.getElementById('grupo-id');
-        const name = document.getElementById('nombre-grupo').value;
-        const sel = document.getElementById('miembros-grupo');
-        const miembros = Array.from(sel.selectedOptions).map(o => o.text);
-        if (idInput.value) {
-          const g = grupos.find(x => x.id == idInput.value); g.name = name; g.miembros = miembros;
-        } else { grupos.push({ id: Date.now(), name, miembros }); }
-        renderGrupos(); e.target.reset(); idInput.value = ''; document.getElementById('miembros-seleccionados').value = '';
+      document.getElementById('form-grupo').addEventListener('submit', e=>{
+        e.preventDefault(); const idInput=document.getElementById('grupo-id');
+        const name=document.getElementById('nombre-grupo').value; const sel=document.getElementById('miembros-grupo');
+        const miembros=Array.from(sel.selectedOptions).map(o=>o.text);
+        if(idInput.value){ const g=grupos.find(x=>x.id==idInput.value); g.name=name; g.miembros=miembros; }
+        else grupos.push({id:Date.now(),name,miembros}); renderGroups(); e.target.reset(); idInput.value=''; document.getElementById('miembros-seleccionados').value='';
       });
-      function renderGrupos() {
-        const list = document.getElementById('lista-grupos'); list.innerHTML = '';
-        grupos.forEach(g => {
-          const li = document.createElement('li');
-          li.innerHTML = `<strong>${g.name}</strong>: ${g.miembros.join(', ')} <button data-id="${g.id}" class="edit-grupo">Editar</button>`;
-          list.appendChild(li);
-        });
-        document.querySelectorAll('.edit-grupo').forEach(btn => btn.addEventListener('click', () => {
-          const g = grupos.find(x => x.id == btn.dataset.id);
-          document.getElementById('grupo-id').value = g.id;
-          document.getElementById('nombre-grupo').value = g.name;
-          poblarSelect('miembros-grupo');
-          Array.from(document.getElementById('miembros-grupo').options).for```
+      function renderGroups(){
+        const list=document.getElementById('lista-grupos'); list.innerHTML='';
+        grupos.forEach(g=>{ const li=document.createElement('li'); li.innerHTML=`<strong>${g.name}</strong>: ${g.miembros.join(', ')} <button data-id="${g.id}" class="edit-grupo">Editar</button>`; list.appendChild(li); });
+        document.querySelectorAll('.edit-grupo').forEach(btn=>btn.addEventListener('click',()=>{const g=grupos.find(x=>x.id==btn.dataset.id);document.getElementById('grupo-id').value=g.id;document.getElementById('nombre-grupo').value=g.name;populateSelect('miembros-grupo');Array.from(document.getElementById('miembros-grupo').options).forEach(o=>o.selected=g.miembros.includes(o.text));updateSelectedMembers();}));
+      }
+      // Bautismo
+      document.getElementById('form-bautismo').addEventListener('submit', e=>{e.preventDefault();const sel=document.getElementById('bautizo-contacto');document.getElementById('lista-bautismos').innerHTML+=`<li>${sel.options[sel.selectedIndex].text} - ${document.getElementById('bautizo-fecha').value}</li>`;e.target.reset();});
+      // Reportes
+      document.getElementById('add-report').addEventListener('click',()=>{const f=document.getElementById('form-reporte');f.style.display=f.style.display==='block'?'none':'block';});
+      document.getElementById('save-reporte').addEventListener('click',()=>{const sel=document.getElementById('reporte-contacto'),txt=document.getElementById('reporte-texto').value;document.getElementById('lista-reportes').innerHTML+=`<li>${sel.options[sel.selectedIndex].text}: ${txt}</li>`;document.getElementById('form-reporte').style.display='none';});
+      // Calendario
+      document.getElementById('form-evento').addEventListener('submit', e=>{e.preventDefault();const n=document.getElementById('nombre-evento').value;document.getElementById('lista-eventos').innerHTML+=`<li>${n} - ${document.getElementById('fecha-evento').value}</li>`;e.target.reset();});
+    });
+  </script>
+</body>
+</html>
